--- a/package.json
+++ b/package.json
@@ -2,17 +2,26 @@
   "name": "s7client-ts",
   "version": "0.0.1",
   "description": "Step7 client based on node-s7client s7client, Typescript ready",
-  "keywords": ["step7", "s7", "plc", "typescript"],
+  "keywords": [
+    "step7",
+    "s7",
+    "plc",
+    "typescript"
+  ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "dev": "nodemon --watch 'src/**' --ext 'ts' --exec node -r ts-node/register ./src/index.ts",
-    "build" : "tsc",
+    "dev": "nodemon --watch 'src/**' --ext 'ts' --exec ts-node ./src/index.ts",
+    "build": "npm run build:clean; npm run build:compile",
+    "build:clean": "rm -rf dist/*",
+    "build:compile": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alberto Brino <alberto.brino@gmail.com>",
   "license": "MIT",
-  "files": ["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "dependencies": {
     "lodash.random": "^3.2.0",
     "node-snap7": "^1.0.5"
